Add: footer head.ejs 불러오기 추가

--- a/views/include/footer.ejs
+++ b/views/include/footer.ejs
@@ -5,8 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Document</title>
-  <!-- <script src="https://cdn.tailwindcss.com"></script> -->
-  <link href="/static/css/output.css" rel="stylesheet" />
+  <%- include('../include/head.ejs') %>
 </head>
 
 <body>
