Design: postPage color 변경

--- a/views/posts/postsPage.ejs
+++ b/views/posts/postsPage.ejs
@@ -8,7 +8,7 @@
     <%- include('../include/head.ejs') %>
 </head>
 
-<body>
+<body class="bg-white dark:bg-gray-800">
     <%- include('../include/header.ejs') %>
         <%- include('../include/postgrid.ejs') %>
             <%- include('../include/pagination.ejs') %>
