Add: header 로그인버튼 수정

--- a/views/include/header.ejs
+++ b/views/include/header.ejs
@@ -20,7 +20,7 @@
                         </svg>
                     </a>
                     <button type="button"
-                        class="text-white bg-mainColor active:bg-blue-900 font-medium rounded-lg text-sm px-4 py-1 text-center dark:bg-mainColor dark:active:bg-blue-900 ">로그인</button>
+                        class="text-white bg-blue-500 active:bg-blue-900 font-medium rounded-lg text-sm px-4 py-1 text-center dark:bg-blue-500 dark:active:bg-blue-900 ">로그인</button>
                 </div>
             </div>
         </header>
