--- a/views/user/registerPage.ejs
+++ b/views/user/registerPage.ejs
@@ -130,6 +130,7 @@
       let loginIdValidate;
       let userPwValidate;
       let userNickValidate;
+      let idDuplicate = false;
 
       document.addEventListener('DOMContentLoaded', function () {
         // 완성 - 이름 (한글, 영어로 2~10글자) 유효성 검사
@@ -228,11 +229,20 @@
             userNameValidate &&
             loginIdValidate &&
             userPwValidate &&
-            userNickValidate
+            userNickValidate &&
+            idDuplicate
           ) {
-            isValid = true;
+            isValid = 'registerComplete';
+          } else if (
+            userNameValidate &&
+            loginIdValidate &&
+            userPwValidate &&
+            userNickValidate &&
+            !idDuplicate
+          ) {
+            isValid = 'notExecuteIdDuplicate';
           } else {
-            isValid = false;
+            isValid = 'reCheck';
           }
         });
         return isValid;
@@ -240,10 +250,47 @@
 
       // 회원가입 버튼 눌렀을 때 필수입력값에 따른 처리 (페이지 렌더링 또는 alert 창)
       function submitRegisterForm() {
-        if (validateForm()) {
+        let isValid = validateForm();
+        if (isValid === 'registerComplete') {
           alert('/나중에 페이지 렌더링으로 변경/');
-        } else {
+        } else if (isValid === 'notExecuteIdDuplicate') {
+          alert('아이디 중복검사를 실행해주세요');
+        } else if (isValid === 'reCheck') {
           alert('(*)필수 항목들을 제대로 입력하지 않았습니다.');
+        } else {
+          alert('알 수 없는 오류');
+        }
+      }
+
+      // 아이디 중복확인 함수 (= 중복확인 버튼 눌렀을 때 함수)
+      async function idDuplicateCheck() {
+        const loginId = document.querySelector('.loginId').value;
+
+        if (!loginId) {
+          alert('아이디를 입력해주세요.');
+          return;
+        }
+
+        try {
+          const response = await axios.post('checkLoginid', {
+            loginId,
+          });
+
+          if (response.data.result === true) {
+            alert('이미 사용 중인 아이디입니다.');
+          } else if (response.data.result === false) {
+            alert('사용 가능한 아이디입니다.');
+            idDuplicate = true;
+          } else {
+            alert('아이디 중복 검사에 실패했습니다.');
+          }
+        } catch (error) {
+          if (error.response && error.response.status === 409) {
+            alert('이미 사용 중인 아이디입니다.');
+          } else {
+            console.error('Error:', error);
+            alert('아이디 중복 검사 중 오류가 발생했습니다.');
+          }
         }
       }
     </script>
@@ -295,6 +342,7 @@
               <br />
               <input type="password" class="userPw" name="userPw" required />
               <!-- oninput="checkField(this)" -->
+              <!-- oninput="pwCheck()" -->
 
               <!-- <span class="inputguide">*비밀번호를 입력하세요.</span> -->
             </label>
@@ -303,6 +351,21 @@
             *비밀번호는 8~15글자의 영문, 숫자, 특수문자(@$!%*#?&)를 포함해야
             합니다.
           </div>
+
+          <div>
+            <label>
+              *비밀번호 확인
+              <br />
+              <input
+                type="password"
+                class="userPwCheck"
+                name="userPwCheck"
+                required
+              />
+              <!-- oninput="pwCheck()" -->
+            </label>
+          </div>
+          <div class="userPwCheckGuide">*비밀번호가 일치하지 않습니다.</div>
           <div>
             <label>
               *별명
