--- a/views/user/registerPage.ejs
+++ b/views/user/registerPage.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>회원가입</title>
+    <%- include("../include/head.ejs") %>
     <style>
       * {
         padding: 0;
