Add : head, footer include 수정

--- a/views/user/registerPage.ejs
+++ b/views/user/registerPage.ejs
@@ -434,6 +434,6 @@
         </form>
       </div>
     </div>
-    <%- include(../include/footer.ejs) %>
+    <%- include("../include/footer.ejs") %>
   </body>
 </html>
