--- a/views/posts/postDetailPage.ejs
+++ b/views/posts/postDetailPage.ejs
@@ -25,7 +25,17 @@
                     <div>
                         <button type="button"
                             class="bg-gray-500 text-white font-semibold py-0.5 px-1 text-xs md:text-sm md:py-1 md:px-3 rounded mr-0.5 md:mr-2 hover:bg-green-600"
-                            onclick="updatePost('<%= post.postId %>', '<%= post.userId %>')">수정</button>
+                            onclick="editPost('<%= post.postId %>', '<%= post.postTitle %>', '<%= post.postContent %>')">
+                            수정
+                        </button>
+
+                        <!-- <button type="button"
+                            class="bg-gray-500 text-white font-semibold py-0.5 px-1 text-xs md:text-sm md:py-1 md:px-3 rounded mr-0.5 md:mr-2 hover:bg-green-600"
+                            onclick="editPost('<%= post.postId %>', '<%= post.postTitle.replace(/'/g, " \\'") %>', '<%=
+                                post.postContent.replace(/'/g, "\\'" ).replace(/\n/g, '\\n' ) %>')">
+                                수정
+                        </button> -->
+
                         <button type="button"
                             class="bg-gray-500 text-white font-semibold py-0.5 px-1 text-xs md:text-sm md:py-1 md:px-3 rounded hover:bg-red-600"
                             onclick="deletePost('<%= post.postId %>', '<%= post.userId %>')">
@@ -66,9 +76,19 @@
 
 <script>
     // 수정 버튼 클릭 시
-    async function updatePost(postId) {
+    async function editPost(postId, postTitle, postContent) {
         try {
-            // 입력폼 페이지로 이동하는 코드
+            const res = await axios({
+                method: 'post',
+                url: `/post/form/${postId}`, // 게시물 폼 페이지 이동
+                data: {
+                    postId: post.postId,
+                    postTitle: post.postTitle,
+                    postContent: post.postContent
+                }
+            })
+            console.log('res', res);
+            const { data } = res;
 
         } catch (error) {
             console.error('update error>>', error);
@@ -77,7 +97,7 @@
 
 
     // 삭제 버튼 클릭시
-    async function deletePost(postId) {
+    async function deletePost(postId, userId) {
         try {
             if (window.confirm('게시물을 삭제하시겠습니까?')) {
                 const res = await axios({
@@ -90,11 +110,11 @@
                 if (res.data.result) {
                     console.log('Delete successful');
                     window.location.href = `/post/list/${userId}/1/12`;
-                    // 삭제 성공시 사용자 게시물 목록 페이지
+                    //     // 삭제 성공시 사용자 게시물 목록 페이지
                 } else {
                     console.log('Delete failed');
                     window.location.href = `/post/list/user`;
-                    // 삭제 실패 처리
+                    //     // 삭제 실패 처리
                 }
             }
         } catch (error) {
