Design: Main Card frame

--- a/views/include/postgrid.ejs
+++ b/views/include/postgrid.ejs
@@ -1,7 +1,10 @@
-<div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4 px-4 sm:px-6 lg:px-52 pt-20">
+<div class=" book grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4   gap-4 xl:gap-10  px-4 sm:px-6 lg:px-52 pt-20 ">
   <% postList.forEach(post=> { %>
-    <div
-      class="group relative shadow-md rounded-lg overflow-hidden transform transition duration-500 hover:scale-105 p-4 flex flex-col justify-between bg-gray-100 dark:bg-gray-500">
+    <div class="group relative flex flex-col justify-around
+    w-full h-[330px] xl:w-[320px] xl:h-[330px]
+   shadow-md hover:shadow-lg rounded-md overflow-hidden transform origin-bottom transition duration-400 hover:scale-105 p-5 ease-in  bg-gray-100 dark:bg-gray-500">
+    <!-- <div class="flex flex-col w-full bg-bg-element1 rounded-md shadow-md transition-all duration-250 ease-in hover:shadow-lg hover:scale-105"> -->
+      
       <a href="/post/<%= post.postId %>">
         <h2 class="tracking-tight text-gray-900 text-lg font-bold hover:underline block mb-2 dark:text-white">
           <%= post.postTitle %>
@@ -13,7 +16,7 @@
         </h3>
       </div>
       <div class="border-t border-gray-300 pt-2 mt-2 mt-auto">
-        <p class="font-medium text-gray-900 text-gray-500 text-sm mb-2 dark:text-white">by <%= post.User.userNick %>
+        <p class="font-medium  text-gray-500 text-sm mb-2 dark:text-white">by <%= post.User.userNick %>
         </p>
         <div class="flex justify-between items-center text-gray-400 text-xs mt-1 dark:text-white">
           <span>
@@ -28,3 +31,5 @@
     </div>
     <% }); %>
 </div>
+
+
